[package]
name = "gravitation-particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
ggez = "0.9.3"
image = "0.24.7"
nalgebra = "0.32.3"
rand = "0.8.5"
rayon = "1.8.0"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
codegen-unit = 1

